force-app/main/default/objects/Authorization_Warranty_DMS__c/Authorization_Warranty_DMS__c.object-meta.xml
<CustomObject>
    <label>Authorization Warranty DMS</label>
    <nameField>
        <label>Authorization No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorization Warranty DMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>