force-app/main/default/objects/Authorization_Warranty_DMS__c/fields/ApplicationDealerCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDealerCode__c</fullName>
    <label>ApplicationDealerCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>