force-app/main/default/objects/Authorization_Warranty_DMS__c/fields/ApplicationPointCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPointCode__c</fullName>
    <label>ApplicationPointCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>