force-app/main/default/objects/Authorization_Warranty_DMS__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Authorization Warranty DMS</relationshipLabel>
    <relationshipName>Authorization_Warranty_DMS</relationshipName>
    <type>Lookup</type>
</CustomField>